force-app/main/default/objects/Activation_Reward_Discount__c/Activation_Reward_Discount__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Activation Reward Discount for Account and Opportunity</description>
    <label>Activation Reward Discount</label>
</CustomObject>