force-app/main/default/objects/Activation_Reward_Discount__c/fields/lower_Value__c.field-meta.xml
<CustomField>
    <fullName>lower_Value__c</fullName>
    <label>lower Value</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>